# VK_EDU

./: README.md
1 sem/ADS/RK 1/t1/: main.cpp
1 sem/ADS/RK 1/t2/: main.cpp
1 sem/ADS/RK 1/t3/: main.cpp
1 sem/ADS/RK2/t1/: main.cpp
1 sem/ADS/RK2/t2/: main.cpp
1 sem/ADS/RK2/t3/: main.cpp
1 sem/ADS/RK2/t4/: main.cpp
1 sem/ADS/module1/task1/: main.cpp
1 sem/ADS/module1/task2/: main.cpp
1 sem/ADS/module1/task3/: main.cpp
1 sem/ADS/module1/task4/: main.cpp
1 sem/ADS/module1/task5/: main.cpp
1 sem/ADS/module1/task6/: main.cpp
1 sem/ADS/module1/task7/: main.cpp
1 sem/ADS/module2/task1/: main.cpp
1 sem/ADS/module2/task2/: main.cpp
1 sem/ADS/module2/task3/: main.cpp
1 sem/ADS/module2/task4/: main.cpp
1 sem/ADS/module2/task5/: main.cpp
1 sem/ADS/module3/task1/: CMakeLists.txt  main.cpp
1 sem/ADS/module3/task1/include/: ArcGraph.h  IGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  SetGraph.h
1 sem/ADS/module3/task2/: main.cpp
1 sem/ADS/module3/task3/: main.cpp
1 sem/C++ programming/hw1/: .gitignore  CMakeLists.txt  README.md  main.cpp
1 sem/C++ programming/hw1/project/: CMakeLists.txt
1 sem/C++ programming/hw1/project/include/: ActorFilms.h  InputData.h
1 sem/C++ programming/hw1/project/src/: ActorFilms.cpp
1 sem/C++ programming/hw2/: .gitignore  CMakeLists.txt  README.md  main.cpp
1 sem/C++ programming/hw2/project/: CMakeLists.txt
1 sem/C++ programming/hw2/project/include/: ASTNodeWalker.h  AstNode.h  AstNodeType.h  Exeptions.h  ICalculator.h  MathParser.h  ParserHelp.h  Tokens.h
1 sem/C++ programming/hw2/project/src/: ASTNodeWalker.cpp  AstNode.cpp  Exeptions.cpp  MathParser.cpp  ParserHelp.cpp  Tokens.cpp
1 sem/C++ programming/hw2/tests/: CMakeLists.txt  tests.cpp
1 sem/ML Intro/hw2/: HW2_Okutin.ipynb
1 sem/ML Intro/hw3/: HW3_Okutin.ipynb
1 sem/ML Intro/hw4/: HW4_Okutin.ipynb
1 sem/ML Intro/hw5/: HW5_Okuin.ipynb
1 sem/ML Intro/hw6/: HW6_Okutin.ipynb
1 sem/ML Intro/hw7/: HW7_Okutin.ipynb
1 sem/ML Intro/hw8/: HW8_Okutin.ipynb
2 sem/NeuralNetworks Intro/hw1/: lecture1_hw.ipynb
2 sem/NeuralNetworks Intro/hw2/: Practice task 2, Back propagation for MNIST.ipynb
2 sem/NeuralNetworks Intro/hw3/: seminar3+hw3.ipynb
2 sem/NeuralNetworks Intro/hw4/: homework4.ipynb
2 sem/NeuralNetworks Intro/hw5/: homework5.ipynb
